@@ -1,4 +1,4 @@
-static const unsigned int testEncodingsCount = 14;
+static const unsigned int testEncodingsCount = 18;
 static const ::Orthanc::Encoding testEncodings[] = {
   ::Orthanc::Encoding_Latin5,
   ::Orthanc::Encoding_Hebrew,
@@ -13,9 +13,13 @@ static const ::Orthanc::Encoding testEncodings[] = {
   ::Orthanc::Encoding_Thai,
   ::Orthanc::Encoding_Japanese,
   ::Orthanc::Encoding_Ascii,
-  ::Orthanc::Encoding_Chinese
+  ::Orthanc::Encoding_Windows1251,
+  ::Orthanc::Encoding_Chinese,
+  ::Orthanc::Encoding_Windows1251,
+  ::Orthanc::Encoding_Windows1251,
+  ::Orthanc::Encoding_Windows1251
 };
-static const char *testEncodingsEncoded[14] = {
+static const char *testEncodingsEncoded[18] = {
   "\x54\x65\x73\x74\xe9\xe4\xf6\xf2\xdd",
   "\x54\x65\x73\x74\xe3",
   "\x54\x65\x73\x74\xc8",
@@ -29,9 +33,13 @@ static const char *testEncodingsEncoded[14] = {
   "\x54\x65\x73\x74\xfb",
   "\x54\x65\x73\x74\x84\x44\x83\xa6\xc8",
   "\x54\x65\x73\x74",
-  "\x81\x30\x89\x37\x81\x30\x89\x38\xA8\xA4\xA8\xA2\x81\x30\x89\x39\x81\x30\x8A\x30"
+  "\x54\x65\x73\x74\xc4\x9e",
+  "\x81\x30\x89\x37\x81\x30\x89\x38\xA8\xA4\xA8\xA2\x81\x30\x89\x39\x81\x30\x8A\x30",
+  "\xd0\xe5\xed\xf2\xe3\xe5\xed\xee\xe3\xf0\xe0\xf4\xe8\xff",
+  "\xD2\xE0\xE7",
+  "\xcf\xf0\xff\xec\xe0\xff"
 };
-static const char *testEncodingsExpected[14] = {
+static const char *testEncodingsExpected[18] = {
   "\x54\x65\x73\x74\xc3\xa9\xc3\xa4\xc3\xb6\xc3\xb2\xc4\xb0",
   "\x54\x65\x73\x74\xd7\x93",
   "\x54\x65\x73\x74\xce\x98",
@@ -45,5 +53,9 @@ static const char *testEncodingsExpected[14] = {
   "\x54\x65\x73\x74\xe0\xb9\x9b",
   "\x54\x65\x73\x74\xd0\x94\xce\x98\xef\xbe\x88",
   "\x54\x65\x73\x74",
-  "\xc3\x9e\xc3\x9f\xc3\xa0\xc3\xa1\xc3\xa2\xc3\xa3"
+  "\x54\x65\x73\x74\xd0\x94\xd1\x9b",
+  "\xc3\x9e\xc3\x9f\xc3\xa0\xc3\xa1\xc3\xa2\xc3\xa3",
+  "\xd0\xa0\xd0\xb5\xd0\xbd\xd1\x82\xd0\xb3\xd0\xb5\xd0\xbd\xd0\xbe\xd0\xb3\xd1\x80\xd0\xb0\xd1\x84\xd0\xb8\xd1\x8f",
+  "\xd0\xa2\xd0\xb0\xd0\xb7",
+  "\xd0\x9f\xd1\x80\xd1\x8f\xd0\xbc\xd0\xb0\xd1\x8f"
 };
